# SCAR

./: .gitignore  README.md  pyproject.toml  test.ipynb
create_training_data/: act_dataset.py  create_dataset.py
evaluations/: Toxicity_API.py  eval_funcs.py  eval_harnes.sh
llama3_SAE/: ConversionScript.py  README.md  config.json  configuration_llama3_SAE.py  determined_trails.py  modeling_llama3_SAE.py
llama3_SAE/SAE_config/: llama3-l24576-b25-k2048.json
